Fixed dropdowns to be a little better. No need for coloring with .error or whatever, better spacing, form elements inside, etc. Dropshadow. (#2)

--- a/scss/_constants.scss
+++ b/scss/_constants.scss
@@ -15,3 +15,6 @@ $input-padding: 6px 12px;
 // navbar sizes
 $bar-height: 52px;
 $bar-width: 175px;
+
+// dropdown
+$drawer-max-height: 100px;
